--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -147,6 +147,7 @@ padding: 0;
         &__map{
             order: 3;
             align-self: flex-end;
+            margin-top: 55px;
         }
         &__btn{
             order: 2;
