--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -194,7 +194,7 @@
     @include textLg(17px, 700);
     line-height: 1.05;
   }
-  &__input-name { //gggg
+  &__input-name {
     @include textLg(18px, 400);
     line-height: 1.07;
     display: flex;
@@ -242,7 +242,7 @@
     min-height: 50px;
     outline: none;
   }
-  // иконка на лэйбл KATE
+ 
   &__label--phone {
     position: relative;
     width: 25px;
@@ -292,9 +292,6 @@
       top: -38px;
       left: 227px;
     }
-
-
-
   }
    &__legend--extra {
      @include titleSm;
@@ -394,11 +391,9 @@
       display: none;
     }
     &__section--radio {
-      min-width: 300px;
       width: 100%;
-     // justify-content: center;
-margin-left: 215px;
-margin-top: 20px;
+      flex-basis: 51%;
+      margin: 0 0 0px 58px;
     }
     &__legend::after {
       display: none;
@@ -438,10 +433,9 @@ margin-top: 20px;
     }
     &__input--radio:not(checked)+&__label--radio {
       position: relative;
-      padding-left: 77px;
+      padding: 11px 0 0 77px;
       //top: 5px; // width: 180px;
       display: flex;
-      padding-top: 11px;
     }
     &__filedset--checkbox {
       padding: 0;
@@ -463,8 +457,7 @@ margin-top: 20px;
     justify-content: center;
 
     &--radio{
-      flex-direction: column;
-      margin-bottom: 35px;
+      // margin: 10px 0 0 10px;
     }
     &--checkbox{
       min-height: 304px;
@@ -494,14 +487,14 @@ margin-top: 20px;
       min-width: 600px;
       justify-content: center;
       display: flex;
-      margin-left: 170px;
-      margin-top: 10px;
+      margin: 10px 0 0 155px;
     }
     }
     &__box{
     //min-height: 70px;
     display: flex;
     min-width: 712px;
+    min-height: 45px;
     //justify-content: flex-end;
     }
     &__group--checkbox {
@@ -515,6 +508,7 @@ margin-top: 20px;
      // justify-content: center;
      margin-left: 217px;
      max-height: 220px;
+     min-width: 500px;
      margin-top: 30px;
     }
     &__section--checkbox {
@@ -598,8 +592,8 @@ margin-top: 20px;
       color: $greenLeft;
       text-transform: uppercase;
       position: relative;
-      top: 15px;
-      left: 25px;
+      top: 34px;
+      left: 20px;
     }
     &__input--phone {
       @include textLg(19px,
@@ -627,8 +621,8 @@ margin-top: 20px;
     &__label--phone:after {
       position: absolute;
       content: '';
-      top: 30px;
-      left: -60px;
+      top: 40px;
+      left: -51px;
       background: url('/src/img/sprites.png') -212px -263px;
       width: 25px;
       height: 24px;
@@ -656,8 +650,8 @@ margin-top: 20px;
       &::after {
         position: absolute;
         content: "";
-        top: 25px;
-        left: -40px;
+        top: 20px;
+        left: -45px;
       }
     }
     &__legend--extra {
@@ -729,7 +723,8 @@ margin-top: 20px;
 
       &__legend--color,
       &__legend--name,
-      &__legend--extra {
+      &__legend--extra,
+      &__legend--radio {
         left: 140px;
       }
       &__inner--checkbox {
@@ -737,12 +732,13 @@ margin-top: 20px;
         height: auto;
       }
       &__inner--radio{
-        flex-direction: column;
+        
       }
       &__group--checkbox {
         flex-direction: row;
         min-height: 50px;
-        flex-basis: 890px;
+        // flex-basis: 890px;
+        flex-basis: 877px;
       }
       &__section--name {
         margin-left: 175px;
@@ -760,22 +756,7 @@ margin-top: 20px;
         width: 100%;
         min-width: 1150px;
       }
-      // &__inner--phone::before{
-      //   content: '';
-      //   background: url('/src/img/sprites.png') -212px -263px;
-      //   width: 25px;
-      //   height: 24px;
-      // position: absolute;
-      //   margin-left: 900px;
-      // }
-      // &__inner--phone:hover::before {
-      //   content: '';
-      //   background: url('/src/img/sprites.png') -264px -263px;
-      // position: absolute;
-      //   width: 25px;
-      //   height: 24px;
-      // margin-left: 900px;
-      // }
+     
       &__inner--email::before {
         content: '';
         background: url('/src/img/css_sprites.png') -10px -10px;
