--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -393,7 +393,7 @@
     &__section--radio {
       width: 100%;
       flex-basis: 51%;
-      margin: 0 0 0px 58px;
+      margin: 0 0 0 60px;
     }
     &__legend::after {
       display: none;
@@ -731,14 +731,11 @@
         min-height: 228px;
         height: auto;
       }
-      &__inner--radio{
-        
-      }
       &__group--checkbox {
         flex-direction: row;
         min-height: 50px;
-        // flex-basis: 890px;
         flex-basis: 877px;
+        margin: 0;
       }
       &__section--name {
         margin-left: 175px;
@@ -769,16 +766,17 @@
         min-width: 700px;
       }
       &__wrap{
-        justify-content: center;
+        justify-content: space-around;
         min-width: 700px;
+        width: 100%;
       }
       &__btn {
-        margin-left: 250px;
+        margin-left: 210px;
         vertical-align: top;
       }
-      span {
-        margin-right: 250px;
-      }
+      // span {
+      //   margin-right: 250px;
+      // }
     }
   }
 }
