--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -214,8 +214,13 @@ opacity:0.8;
 }
 
 // index ______index page_____________________________
-
+// .open{
+//   display: block;
+// }
 .modal-ctg {
+  .open{
+    display: block;
+  }
   margin: 0 auto;
  right: 0px;
  left: 0;
@@ -275,9 +280,6 @@ padding-right:10px;
     border: 2px solid #63d1bb;
   }
  &__input:checked+&__size {
-
-
-
     border: 2px solid #63d1bb;
   }
 
