--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -204,6 +204,27 @@
     border-bottom: 2px solid #000;
     min-height: 50px;
   }
+  &__input-name:focus{
+    outline: none;
+  }
+  &__line{
+    position: relative;
+    top: -2px;
+    left: 0;
+    width: 100%;
+
+    &::before{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 3px;
+      background: $greenLeft;
+      display: none;
+    }
+  }
+  &__input-name:focus ~ &__line::before{
+    display: block;
+  }
   &__legend--phone {
     @include titleSm;
     line-height: calc(16/17);
@@ -229,8 +250,14 @@
     min-height: 50px;
     outline: none;
     margin-top: 10px;
-
   }
+  &__input--email:focus ~ &__line::before{
+    display: block;
+  }
+  &__input--phone:focus ~ &__line::before{
+    display: block;
+  } 
+
   &__input--email {
     @include textLg(18px, 400);
     line-height: 1.07; //display: flex;
@@ -259,14 +286,8 @@
       height: 24px;
     }
   }
-  &__label--phone:hover::after {
-    position: absolute;
-    content: '';
-    top: -38px;
-    left: 230px;
-    background-position: -264px -263px;
-    width: 25px;
-    height: 24px;
+  &__input--phone:focus ~ &__label--phone::after{
+    display: none;
   }
   &__input--phone:focus+&__label--phone::before {
     position: absolute;
@@ -320,6 +341,10 @@
      margin-bottom: 13px;
      margin-left:50px;
      width:100%;
+  }
+  &__textarea:focus{
+    border: 2px solid $greenLeft;
+    outline: none;
   }
 
   &__wrap{
@@ -587,6 +612,40 @@
         min-width: 425px;
       }
     }
+    &__line{
+        top: 52px;
+        left: -475px; 
+        height: 3px;
+
+        &--last{
+          left: -422px;
+        }
+        &--phone{
+          top: 63px;
+          left: -522px;
+        }
+        &--email{
+          top: 53px;
+          left: -522px;
+        }
+    }
+    &__input-name:focus ~ &__line::before{
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 3px;
+      min-width: 430px;
+    }
+    &__input-name:focus ~ &__line--last::before{
+      min-width: 377px;
+    }
+    &__input--phone:focus ~ &__line--phone::before{
+      min-width: 522px;
+    }
+    &__input--email:focus ~ &__line--email::before{
+      min-width: 522px;
+    }
+    
     &__legend--phone {
       @include titleSm;
       line-height: calc(16/17);
@@ -594,6 +653,7 @@
       text-transform: uppercase;
       top: 50px;
       left: 40px;
+      width: 100px;
     }
     &__legend--email {
       @include titleSm;
@@ -603,6 +663,7 @@
       position: relative;
       top: 35px;
       left: 40px;
+      width: 100px;
     }
     &__input--phone {
       @include textLg(19px,
@@ -639,15 +700,7 @@
       width: 25px;
       height: 24px;
     }
-    &__label--phone:hover::after {
-      position: absolute;
-      content: '';
-      top: 25px;
-      left: -80px;
-      background-position: -264px -263px;
-      width: 25px;
-      height: 24px;
-    }
+   
     &__input--phone:focus+&__label--phone::before {
       position: absolute;
       content: '';
@@ -791,21 +844,29 @@
         min-width: 665px;
 
       }
+      &__line {
+        &--email{
+          top: 53px;
+          left: -82%;
+        }
+        &--phone{
+          top: 59px;
+          left: -82%;
+        }
+        
+      }
+      &__input--email:focus ~ &__line--email::before{
+        min-width: 690px;
+      }
+      &__input--phone:focus ~ &__line--phone::before{
+        min-width: 690px;
+      }
       &__label--phone::after{
            top: 18px;
            left: -170px;
 
       }
-        &__label--phone:hover::after {
-          position: absolute;
-          content: '';
-          top: 18px;
-          left: -170px;
-          background-position: -264px -263px;
-          width: 25px;
-          height: 24px;
-        }
-
+      
       &__label--email::after{
         top: 10px;
         left: -170px;
@@ -813,12 +874,13 @@
        &__input--phone:focus+&__label--phone::before {
          position: absolute;
          content: '';
-         top: 20px;
+         top: 18px;
          left: -170px;
          background: url('/src/img/sprites.png') -264px -263px;
          width: 25px;
          height: 24px;
        }
+
 
       &__data {
         width: 100%;
@@ -858,3 +920,14 @@
     }
   }
 }
+// .form-page__input-name+label{
+//   display: block;
+//   position: relative;
+//   height: 20px;
+//   width: 10%;
+//   border-bottom: 1px solid red;
+// }
+// .form-page__input-name:focus+label{
+//   width: 100%;
+//   border-bottom: 1px solid red;
+// }
