--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -289,6 +289,15 @@
   &__input--phone:focus ~ &__label--phone::after{
     display: none;
   }
+  &__label--phone:hover::after {
+    position: absolute;
+    content: '';
+    top: -38px;
+    left: 230px;
+    background-position: -264px -263px;
+    width: 25px;
+    height: 24px;
+    }
   &__input--phone:focus+&__label--phone::before {
     position: absolute;
     content: '';
@@ -710,6 +719,15 @@
       width: 25px;
       height: 24px;
     }
+    &__label--phone:hover::after {
+      position: absolute;
+      content: '';
+      top: 25px;
+      left: -40px;
+      background-position: -264px -263px;
+      width: 25px;
+      height: 24px;
+      }
 
     &__label--email{
       &::after {
@@ -793,6 +811,15 @@
   margin: 17px 0 0 250px;
 
 }
+&__label--phone:hover::after {
+  position: absolute;
+  content: '';
+  top: 18px;
+  left: -170px;
+  background-position: -264px -263px;
+  width: 25px;
+  height: 24px;
+  }
 &__filedset--radio{
   margin-bottom: 45px;
 }
